<resources>
    <string name="app_name">I Will Become a Writer</string>

    <string name="facebook_app_id">170963217330516</string>
    <string name="fb_login_protocol_scheme">fb170963217330516</string>
    
    <string name="google_client_id">691397293091-p26iea3f653evi5tug72igo1n01o4os5.apps.googleusercontent.com</string>
    <string name="google_client_secret">sgRJQJ9eeW164XZgQkzO-q0M</string>

    <!-- GENERAL -->
    <string name="page_login">Login</string>
    <string name="page_home">HomePage</string>
    <string name="page_category">Category</string>
    <string name="page_profile">Profile</string>
    <string name="page_editor">Editor</string>
    <string name="page_editor_modifier">EditorMixer</string>
    <string name="page_book_detail">Book</string>
    <string name="page_reader">Reader</string>

    <string name="title_chinese_today">今</string>
    <string name="title_chinese_i">我</string>
    <string name="title_chinese_day">天</string>
    <string name="title_chinese_want">要</string>
    <string name="title_chinese_become">當</string>
    <string name="title_chinese_writer">作</string>
    <string name="title_chinese_home">家</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="visitor">Visitor</string>
    <string name="select_role_chinese_please">請</string>
    <string name="select_role_chinese_select">選</string>
    <string name="select_role_chinese_horn">角</string>
    <string name="select_role_chinese_color">色</string>
    <string name="hint_button_writer">作家</string>
    <string name="hint_button_commenter">評論家</string>
    <string name="hint_writer_description">作家除了能評論作品，\n也可以發表書籍。</string>
    <string name="hint_reviewer_description">評論家可以評論他人作品。</string>
    <string name="button_confirm">確定</string>
    <string name="text_choose_category">挑選書籍類型</string>
    <string name="hint_max_interest">最多5項</string>
    <string name="button_complete">完成</string>
    <string name="hint_please_pick_a_role">請選角色</string>
    <string name="internet_not_connected">Internet Not Connected</string>
    <string name="title_login_select_name">請要如何稱呼您呢？</string>
    <string name="hint_please_enter_your_name">請輸入您的稱謂</string>

    <string name="max_number_interest">5</string>
    <string name="hint_too_many_interest">You have reached the maximum number of interests</string>
    <string name="label_mytrackingworks">追蹤作品</string>
    <string name="hint_nav_profile">個人</string>
    <string name="hint_nav_category">分類</string>
    <string name="hint_nav_home">首頁</string>
    <string name="hint_nav_search">搜尋</string>

    <string name="ratio4to5">4:5</string>
    <string name="select_picture">Select Picture</string>
    <string name="text_dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>

    <string name="user_role_writer">作家</string>
    <string name="user_role_reviewer">評論家</string>
    <string name="text_create_book">Create Book</string>
    <string name="text_title">Title</string>
    <string name="hint_book_title">Enter Book Title</string>
    <string name="hint_chapter_title">Chapter Title</string>
    <string name="hint_editor_text_content">Your Journey Begins Here ...</string>

    <!-- CONSTANT RATIO -->
    <string name="book_cover_wh_ratio">2:3</string>

    <!-- HOME -->
    <string name="home_section_recommend_title">Recommend</string>
    <string name="home_section_work_in_progress_title">My Works</string>
    <string name="home_section_popular_title">Popular</string>
    <string name="home_section_currently_reading">Currently Reading</string>

    <!-- SEARCH FILTERS -->
    <string name="search_filter_popularity">Popularity</string>
    <string name="search_filter_most_recent">Most Recent</string>
    <string name="search_filter_recommended">Recommended</string>
    <string name="search_filter_completed">Completed</string>
    <string name="hint_success_login">Login Success</string>

    <!-- EDITOR PAGES -->
    <string name="editor_edit">Edit</string>
    <string name="editor_edit_text">Edit Text</string>
    <string name="editor_edit_image">Edit Image</string>
    <string name="editor_save">Save</string>
    <string name="editor_preview">Preview</string>
    <string name="editor_done">Done</string>
    <string name="editor_new_chapter_prepared">New Chapter Prepared</string>
    <string name="editor_error_save">Failed</string>
    <string name="editor_btn_remove_image">Delete Image</string>
    <string name="editor_btn_add_images">Add Images</string>
    <string name="editor_btn_edit_text">Edit Text</string>
    <string name="hint_category">Category</string>
    <string name="text_author_title">Author :</string>

    <!-- EDITOR MANAGE -->
    <string name="editor_manage_sort">Sort</string>
    <string name="editor_manage_open_to_public">Publish</string>
    <string name="editor_manage_word_count">%d / %d</string>

    <!-- EXCEPTIONS -->
    <string name="exception_api_cancel">%s: process canceled</string>
    <string name="exception_api_failed">%s: process failed</string>
    <string name="exception_unrecognized_class">%s: Unrecognized class %s</string>
    <string name="exception_unrecognized_viewtype">%s: Unrecognized view type %d</string>
    <string name="exception_page_not_found">%s: Page not found</string>

    <!--====== ERROR MESSAGE =====-->
    <string name="error_missing_data">Missing Data</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_invalid_token">Invalid Token</string>

    <!-- TIME -->
    <string name="unit_second">&#160;second</string>
    <string name="unit_minutes">&#160;minute</string>
    <string name="unit_hour">&#160;hour</string>
    <string name="unit_day">&#160;day</string>
    <string name="unit_year">&#160;year</string>
    <string name="before">&#160;ago</string>
    <string name="time_before">%d%s%s</string>
    <string name="btn_see_all">See All</string>

    <!-- ========== Facebook ========== -->
    <string-array name="fb_requests">
        <item>email</item>
    </string-array>

    <string name="fb_email">email</string>
    <string name="fb_id">id</string>
    <string name="fb_name">name</string>

    <!--====== GOOGLE ======-->
    <string name="google_exception_null">GOOGLE RESULT is NULL</string>

    <!--=========== SCALE ===========-->
    <string name="home_card_w_to_h_ratio">2:1.3</string>

    <!--======= TAB TITLE ======-->
    <string name="tab_following">Following</string>
    <string name="tab_my_work">Works</string>

    <!--====== BOOK DETAIL PAGE ======-->
    <string name="book_default_category">Unknown</string>

</resources>
