<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="studio.saladjam.iwanttobenovelist.loginscene.LoginSigninupViewModel" />
        <import type="studio.saladjam.iwanttobenovelist.repository.loadingstatus.APILoadingStatus"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/text_signup_i"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1"
            style="@style/TitleText"
            android:text="@string/title_chinese_i"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/text_signup_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1"
            style="@style/TitleText"
            android:text="@string/title_chinese_day"
            app:layout_constraintTop_toTopOf="@id/text_signup_i"
            app:layout_constraintStart_toEndOf="@id/text_signup_i"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            />

        <TextView
            android:id="@+id/text_signup_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1"
            android:text="@string/title_chinese_today"
            style="@style/TitleText"
            app:layout_constraintBottom_toTopOf="@id/text_signup_day"
            app:layout_constraintStart_toStartOf="@id/text_signup_day"/>
        <TextView
            android:id="@+id/text_signup_want"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1"
            style="@style/TitleText"
            android:text="@string/title_chinese_want"
            app:layout_constraintTop_toBottomOf="@id/text_signup_i"
            app:layout_constraintStart_toStartOf="@id/text_signup_i"/>
        <TextView
            android:id="@+id/text_signup_become"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1"
            android:text="@string/title_chinese_become"
            style="@style/TitleText"
            app:layout_constraintTop_toBottomOf="@id/text_signup_want"
            app:layout_constraintStart_toStartOf="@id/text_signup_want"/>
        <TextView
            android:id="@+id/text_signup_writer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_chinese_writer"
            style="@style/TitleText"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/text_signup_become"
            app:layout_constraintStart_toStartOf="@id/text_signup_become"/>

        <TextView
            android:id="@+id/text_signup_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_chinese_home"
            style="@style/TitleText"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintTop_toBottomOf="@id/text_signup_writer"
            app:layout_constraintStart_toStartOf="@id/text_signup_writer"
            app:layout_constraintBottom_toBottomOf="@id/button_signup_facebook"
            app:layout_constraintVertical_bias="0"
            />

        <Button
            android:id="@+id/button_signup_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:background="@drawable/signup_facebook_bg"
            android:text="@string/facebook"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="viewEnd"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toTopOf="@id/button_signup_google"
            android:layout_marginBottom="30dp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintHorizontal_bias="0"
            android:focusable="false"
            android:onClick="@{()->viewModel.loginWithFacebookSelected()}"
            android:clickable="@{!viewModel.isLoading}"/>

        <Button
            android:id="@+id/button_signup_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:background="@drawable/signup_google_bg"
            android:text="@string/google"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:paddingStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="86dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintHorizontal_bias="1"
            android:focusable="false"
            android:shadowColor="#000"
            android:onClick="@{()->viewModel.loginWithGoogleSelected()}"
            android:clickable="@{!viewModel.isLoading}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8000"
            android:visibility="@{viewModel.loadingStatus == APILoadingStatus.LOADING || viewModel.loadingStatus == APILoadingStatus.DONE ? View.VISIBLE:View.GONE}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintDimensionRatio="1"
                android:background="@drawable/bg_dialog_book_creation"
                android:backgroundTint="@color/progress_view">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/LoadingIndicator"
                    android:visibility="@{viewModel.loadingStatus == APILoadingStatus.LOADING ? View.VISIBLE:View.GONE}"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    style="@style/LoadingIndicatorText"
                    android:text="@string/hint_success_login"
                    android:visibility="@{viewModel.loadingStatus == APILoadingStatus.DONE ? View.VISIBLE:View.GONE}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>