<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="studio.saladjam.iwanttobenovelist.loginscene.LoginInterestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_interest_title"
            style="@style/TitleText_NoBorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_choose_category"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_interest_subtitle"
            style="@style/SubtitleText_NoBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_max_interest"
            app:layout_constraintStart_toStartOf="@id/text_interest_title"
            app:layout_constraintTop_toBottomOf="@id/text_interest_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_interest_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:scrollbars="vertical"
            app:categories="@{viewModel.categories}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/button_signup_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_interest_subtitle"
            app:spanCount="3" />

        <Button
            android:id="@+id/button_signup_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="86dp"
            android:background="@drawable/signup_google_bg"
            android:clickable="false"
            android:fontFamily="sans-serif-black"
            android:shadowColor="#000"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_signup_visitor"
            style="@style/Login_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:onClick="@{()->viewModel.createUser()}"
            android:text="@string/button_complete"
            app:layout_constraintTop_toTopOf="@id/button_signup_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>